# MIPT-DistSys-ReliableStorage

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  pom.xml  run_coordinator_tests.sh  run_server_tests.sh  run_tests.sh  ubuntu_deps.sh
cmake/: FindThrift.cmake
src/cpp/: Client.cpp  Coordinator.cpp  CppClient.cpp  CppServer.cpp  Server.cpp
src/cpp/logger/: logger.cpp  logger.hpp
src/main/java/mipt/distsys/storage/proxy/: Coordinator.java  CoordinatorInterface.java  HostPort.java  IncorrectOperationException.java  Server.java  ServerInterface.java  TestCoordinator.java  TestFailedException.java  TestServer.java
src/main/thrift/: ReplicatedStorage.thrift
